Created basics styling
I’ve added some basic styling to the background and the heading.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Hotline Map</title>
+    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Open+Sans" rel="stylesheet"> <!-- This line is linking the Google Font Open Sans to website so we can use it --> 
   </head>
   <body>
     <h1>Welcome!</h1>
