--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
-    <title>Hotline Map</title>
-    <link href="style.css" type="text/css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Open+Sans" rel="stylesheet"> <!-- This line is linking the Google Font Open Sans to website so we can use it --> 
-  </head>
-  <body>
-    <h1>Welcome!</h1>
-  </body>
+    <head>
+        <title>Hotline Map</title>
+        <link href="style.css" type="text/css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Open+Sans" rel="stylesheet"> <!-- This line is linking the Google Font Open Sans to website so we can use it --> 
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    </head>
+    <body>
+        <section class="header">
+        <div class="header-text">
+            <h1 class="title">HotlineMap</h1>
+            <p class="tagline">Find hotlines from around the world</p>
+        </div>
+    </section>
+    <section class="find-numbers">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="jumbotron">
+                    <h2>Where are you?</h2>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="jumbotron">
+                    <h2>Need help?</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    </body>
 </html>
