Updated HTML to include more links
I've updated the HTML to include more links, with links to the Child Welfare website and a Hotel Bookings website, in case someone has to make a quick hotel booking.

--- a/important-links.html
+++ b/important-links.html
@@ -2,11 +2,15 @@
 <html>
 	<head>
 		<title>Important Links</title>
+		<link href="important-links.css" type="text/css" rel="stylesheet">
+    	<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Open+Sans" rel="stylesheet">
 		<script src="script.js"></script>
 	</head>
 	<body>
 		<h1>Important Links</h1>
 		<h3>Here you will find important links to websites that you might need</h3>
 		<a href="http://www.befrienders.org/" onclick="suicideWebsite()">Suicide Prevention</a>
+		<a href="https://www.childwelfare.gov/topics/can/">Child Welfare</a>
+		<a href="https://www.hotels.com">Hotel booking</a>
 	</body>
 </html>
