--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     </head>
     <body>
         <section class="header">
@@ -21,16 +22,50 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="jumbotron">
-                    <h2>Where are you?</h2>
+                        <h2>Where are you?</h2>
+                            <div class="dropdown">
+                                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Country
+                                <span class="caret"></span></button>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#detect" onclick="getLocation()">Auto Detect</a></li>
+                                    <li><a href="#" onclick="displayHK()">Hong Kong</a></li>
+                                    <li><a href="#">China</a></li>
+                                    <li><a href="#">Taiwan</a></li>
+                                    <li><a href="#">Japan</a></li>
+                                    <li><a href="#">USA</a></li>
+                                    <li><a href="#">Australia</a></li>
+                                </ul>
+                            </div>
+                    <p id="demo"></p>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="jumbotron">
-                    <h2>Need help?</h2>
+                    <h2>Contact Information</h2>
+                    <p id="information">Please select coutnry first.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     </body>
+    <script>
+        var x = document.getElementById("demo");
+        var displayInfo = document.getElementById("information");
+        
+        function getLocation() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(showPosition);
+            } else {
+                x.innerHTML = "Geolocation is not supported by this browser.";
+            }
+        }
+        function showPosition(position) {
+            x.innerHTML = "Latitude: " + position.coords.latitude + 
+            "<br>Longitude: " + position.coords.longitude; 
+        }
+        function displayHK() {
+            displayInfo.innerHTML = '<object type="text/html" data="hk.html" ></object>'
+        }
+    </script>
 </html>
