Added more links and copyright
I've added more links, the links to the Red Cross, Airbnb, FEMA, NWS and Ready. I've also added a copyright at the botoom of the page.

--- a/important-links.html
+++ b/important-links.html
@@ -12,5 +12,11 @@
 		<a href="http://www.befrienders.org/" onclick="suicideWebsite()">Suicide Prevention</a>
 		<a href="https://www.childwelfare.gov/topics/can/">Child Welfare</a>
 		<a href="https://www.hotels.com">Hotel booking</a>
+		<a href="http://www.redcross.org/">The Red Cross</a>
+		<a href="https://www.airbnb.com/">Airbnb</a>
+		<a href="https://www.fema.gov/">The US Federal Emergency Managment Agency</a>
+		<a href="http://www.nws.noaa.gov/nwr/">National Weather Service</a>
+		<a href="https://www.ready.gov/">The US Preperation website</a>
+		<p>Copyright © 2017 Hotline Map. All rights reserved.</p>
 	</body>
 </html>
