added links to js

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                                     <li><a href="#hk" onclick="displayHK()">Hong Kong</a></li>
                                     <li><a href="#china" onclick="displayChina()">China</a></li>
                                     <li><a href="#taiwan" onclick="displayTaiwan()">Taiwan</a></li>
-                                    <li><a href="#">Japan</a></li>
-                                    <li><a href="#">USA</a></li>
-                                    <li><a href="#">Australia</a></li>
+                                    <li><a href="#japan" onclick="displayJapan()">Japan</a></li>
+                                    <li><a href="#unitedstates" onclick="displayUS()">USA</a></li>
+                                    <li><a href="#australia" onclick="displayAus()">Australia</a></li>
                                 </ul>
                             </div>
                             <br>
