minor keyword changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="col-sm-6">
                     <div class="jumbotron">
                         <div class="search">
-                            <h2>Where are you?</h2>
+                            <h2>Which Country?</h2>
                             <br>
                             <div class="dropdown">
                                 <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Country
@@ -54,6 +54,9 @@
             </div>
         </div>
     </section>
+    <div class="footer">
+        <p>Copyright 2017</p>
+    </div>
     </body>
     <script src="script.js"></script>
 </html>
