bug fixes on script and html

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                                     <li><a href="#china" onclick="displayChina()">China</a></li>
                                     <li><a href="#taiwan" onclick="displayTaiwan()">Taiwan</a></li>
                                     <li><a href="#japan" onclick="displayJapan()">Japan</a></li>
-                                    <li><a href="#unitedstates" onclick="displayUS()">USA</a></li>
-                                    <li><a href="#australia" onclick="displayAus()">Australia</a></li>
+                                    <li><a href="#unitedstates" onclick="displayUSA()">USA</a></li>
+                                    <li><a href="#australia" onclick="displayAustralia()">Australia</a></li>
                                 </ul>
                             </div>
                             <br>
