Added copyright at bottom and moved script.
I've added some copyright at the bottom of the website. I also moved the script into the body.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         </div>
     </section>
     <div class="footer">
-        <p>Copyright 2017</p>
+        <p id="copyright">Copyright © 2017 Hotline Map</p>
     </div>
-    </body>
     <script src="script.js"></script>
+    </body>
 </html>
