--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                                 <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Country
                                 <span class="caret"></span></button>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#detect" onclick="getLocation()">Auto Detect</a></li>
+                                    <li><a href="#detect" onclick="getLocation()" class="disabled">Auto Detect</a></li>
                                     <li><a href="#hk" onclick="displayHK()">Hong Kong</a></li>
                                     <li><a href="#china" onclick="displayChina()">China</a></li>
                                     <li><a href="#taiwan" onclick="displayTaiwan()">Taiwan</a></li>
