--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        
+        <link rel="icon" href="https://storage.googleapis.com/esfcoco-hotlinemap/hotlinemapicon.png">
     </head>
     <body>
     <section class="header">
