Added important links & UK
Also did some cosmetic changes.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="header-text">
             <h1 class="title">HotlineMap</h1>
             <p class="tagline">Find hotlines from around the world</p>
+            <a href="important-links.html"style="color: #FFFFFF">Important Links</a>
         </div>
     </section>
     <section class="find-numbers">
@@ -37,6 +38,7 @@
                                     <li><a href="#japan" onclick="displayJapan()">Japan</a></li>
                                     <li><a href="#unitedstates" onclick="displayUSA()">USA</a></li>
                                     <li><a href="#australia" onclick="displayAustralia()">Australia</a></li>
+                                    <li><a href="#United Kingdom" onclick="displayUK()">UK</a></li>
                                 </ul>
                             </div>
                             <br>
